# demo-uart-m4-bazel

./: .gitignore  .gitmodules  .gn  BUILD  LICENSE  README.md  WORKSPACE  bootstrap.sh
build_overrides/: pigweed.gni
src/: BUILD  main.cc
targets/atsame54n20a/: BUILD.bazel
targets/tools/: flash.py
tools/: BUILD.gn  PW_PLUGINS  banner.txt  env_setup.json  setup.cfg
