[metadata]
name = project_tools
version = 0.0.1
author = Project Authors
author_email = erick.pfeifer@gmail.com
description = Project pyhton packages for Pigweed plugins

[options]
packages = find:
zip_safe = False
install_requires =
    compiledb

[options.package_data]
project_tools =
    pw.typed